--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -74,6 +74,7 @@ prost = { workspace = true }
 prost-types = { workspace = true }
 tip-distribution = { workspace = true }
 tip-payment = { workspace = true }
+tonic = { workspace = true }
 
 [dev-dependencies]
 fs_extra = { workspace = true }
