--- a/jito-protos/Cargo.toml
+++ b/jito-protos/Cargo.toml
@@ -5,10 +5,10 @@ edition = "2021"
 publish = false
 
 [dependencies]
-bytes = "1.1.0"
-prost = "0.8.0"
-prost-types = "0.8.0"
-tonic = "0.5.2"
+bytes = {workspace = true}
+prost = {workspace = true}
+prost-types = {workspace = true}
+tonic = {workspace = true}
 
 [build-dependencies]
-tonic-build = "0.5.2"
+tonic-build = {workspace = true}
